<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clipToPadding="false"
    android:orientation="vertical"
    tools:context="com.nsahukar.android.bakingapp.ui.StepDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/simple_exo_player_view_height_portrait"
                android:layout_marginBottom="20dp"
                android:background="@android:color/black">

                <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                    android:id="@+id/sepv_recipe_step"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/tv_no_video"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/title_header_no_video"
                    android:textColor="@android:color/white"
                    android:visibility="gone" />

            </FrameLayout>

            <TextView
                android:id="@+id/tv_recipe_step_number"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" />

            <TextView
                android:id="@+id/tv_recipe_step"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" />
        </LinearLayout>

    </ScrollView>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground">

        <Button
            android:id="@+id/btn_previous"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:text="@string/title_previous"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintLeft_toLeftOf="parent"
            tools:text="Ingredients" />

        <Button
            android:id="@+id/btn_next"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:text="@string/title_next"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintRight_toRightOf="parent"
            tools:text="Step 1" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>